# SG-Lang-Demo

./: .env.example  .gitignore  CHANGELOG.md  README.md  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  web.py
.github/workflows/: ci.yml
config/: settings.env
data/documents/: README.md  ai_ml_guide.txt  api_documentation.txt  company_handbook.txt  research_papers.txt  troubleshooting_guide.txt
docs/: FINAL_STATUS.md  ORGANIZATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  STRUCTURE_COMPARISON.md  mkdocs.yml
docs/src/: index.md
docs/src/architecture/: overview.md
docs/src/development/: testing.md
notebooks/: performance_benchmark.ipynb
scripts/: README.md  benchmark_retrieval.py  build_docs.py  build_index.py  quick_demo.py  run_tests.py
src/: __init__.py  config.py
src/rag_system/: __init__.py  document_processor.py  llm_providers.py  rag_pipeline.py  vector_store.py
src/sglang/: __init__.py  parallel_processing.py  structured_prompts.py
src/sglang_demo/: __init__.py  cli.py
src/sglang_helpers/: __init__.py  parallel_processing.py  structured_prompts.py
src/web/: app.py
tests/: test_e2e.py  test_rag_system.py  test_smoke.py  test_smoke_pytest.py
